--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -22,7 +22,7 @@
   }
   
   .textContainer h3 {
-    color: #1a73e8;
+    color: rgb(60, 184, 151);
     margin: 20px 0 30px;
   }
   
@@ -64,7 +64,7 @@
   .buttonContainer a {
     text-decoration: none;
     display: inline-block;
-    background: #1a73e8;
+    background: rgb(60, 184, 151);
     padding: 7px 16px;
     color: #fff;
     font-weight: bold;
@@ -77,7 +77,7 @@
   }
   
   .buttonContainer a:hover {
-    background-color: #0b499b;
+    background-color: rgb(60, 184, 151);
   }
   
   @media (max-width: 1200px) {
