--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -38,11 +38,17 @@
 .productLink:hover{
     color: rgb(255, 255, 255);
     border-bottom-color: rgb(255, 255, 255);
-    background-color: rgb(60, 184, 151);
+    background-color: orange;
 }
 
 .iconContainer{
     position: relative;
+}
+
+.iconContainer img:hover{
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .iconContainer img{
